JG-2004-03-15-0: Testsuite: Fixed function changing queue attributes.

DT-2004-03-15-0: Bugfix:    o Fixed qconf line continuation in cases of long,
                              unbreakable lines.
                            o Fixed qconf parsing of trailing whitespace.
                            o Moved DRMAA Java binding into more appropriate
                              packages.
                            o Added SISSL header to spooling parser.
                 Changed:   Flatfile spooling, DRMAA
                 Issue:     818, 836
                 Review:    JG

RH-2004-03-15-0: Bugfix:    Negative numbers for step in range parsing are
                            not allowed.
                 Changed:   all
                 Issue:     799
                 Review:    SG

AH-2004-03-15-1: Bugfix:    Fix resource reservation problem for sequential
                            jobs

AH-2004-03-15-0: Doc:       Made some fixes to calendar_conf(5) to make
                            it's behaviour more clear.

CR-2004-03-15-0: Testsuite: Adjustments for new GE install script output

AD-2004-03-12-1: Bugfix:    Did fix quote error.
                 Changed:   inst_execd.sh
                 Review:    AS

AD-2004-03-12-0: Bugfix:    Did fix broken symlinks for DARWIN.
                 Changed:   distinst
                 Review:    AS

MD-2004-03-12-1: Bugfix:    - added clear at the end of installation
                            - local fs check for irix65 was broken
                 Chaged:    inst_sge
                 Review:    AD

MD-2004-03-12-0: Enhancm:   - added a autoinstall readme
                 Changed:   README-Autoinstall.txt

SG-2004-03-12-2: Bugfix:    execd died, when a load sensor was restarted.
                 Issue:     835
                 Changed:   execd
                 Review:    AS

AH-2004-03-12-1: Bugfix:    fix access to free'd memory that caused
                            schedd fp-exception under tru64