@@ -37,5 +37,5 @@
 # hostname path
 #
 # e.g.:
-# balduin  /tmp/testsuite
+gimli  /cod_home/rh150277/tmp/testsuite
 
