@@ -1,3 +1,8 @@
+RH-2004-03-16-0: Bugfix:    host group names has to start with a '@'
+                 Changed:   qconf, qmaster
+                 Issue:     719, 740
+                 Review:    SG
+
 JG-2004-03-15-0: Testsuite: Fixed function changing queue attributes.
 
 DT-2004-03-15-0: Bugfix:    o Fixed qconf line continuation in cases of long,
